# aiopygismeteo

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  mkdocs-requirements.txt  mkdocs.yml  mypy.ini  properdocs.yml  pyproject.toml  pytest.ini  pytest.toml  requirements-docs.txt  ruff.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml  test.yml  update-dependencies.yml
aiopygismeteo/: __init__.py  _abc.py  _class.py  _current.py  _fabric.py  _funcs.py  _gismeteo.py  _http.py  _periods.py  _search.py  _step_n.py  exceptions.py  gismeteo.py  http.py  main_class.py  search.py  types.py  utils.py
aiopygismeteo/_dates/: abc.py  month.py  now.py  one_day.py  ten_days.py  three_days.py  two_weeks.py  xpaths.py
aiopygismeteo/_endpoints/: current.py  search.py  step24.py  step3.py  step6.py
aiopygismeteo/dates/: month.py  now.py  one_day.py  ten_days.py  three_days.py  two_weeks.py
docs/: additions.md  current.md  exceptions.md  get_id_by_query.md  gismeteo.md  ide.md  index.md  install.md  installation.md  recommendations.md  requirements.txt  search.md  session.md  step24.md  step3.md  step6.md  types.md  typing.md
docs/dates/: in10_days.md  in3_days.md  in4_days.md  in5_days.md  in6_days.md  in7_days.md  in8_days.md  in9_days.md  month.md  now.md  ten_days.md  three_days.md  today.md  tomorrow.md  two_weeks.md
src/aiopygismeteo/: __init__.py  _gismeteo.py  _http.py  types.py
src/aiopygismeteo/_endpoints/: current.py  step6.py
tests/: conftest.py  test_aiopygismeteo.py  test_current.py  test_everything.py  test_exception_and_session.py  test_exceptions.py  test_exceptions_and_session.py  test_get_id_by_query.py  test_gismeteo.py  test_month.py  test_now.py  test_one_day.py  test_pygismeteo_base.py  test_search.py  test_step24.py  test_step3.py  test_step6.py  test_ten_days.py  test_three_days.py  test_two_weeks.py  utils.py
