[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
name = "aiopygismeteo"
description = "Asynchronous wrapper for Gismeteo API"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "monosans", email = "hsyqixco@protonmail.com" }]
requires-python = ">=3.10"
classifiers = [
  "Framework :: aiohttp",
  "Framework :: AsyncIO",
  "Framework :: Pydantic",
  "Framework :: Pydantic :: 2",
  "Natural Language :: Russian",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: 3.15",
  "Typing :: Typed",
]
dynamic = ["version"]
dependencies = [
  "aiohttp>=3.8",
  "pygismeteo-base>=6.0.1,<7",
  "typing-extensions>=4",
]
urls.documentation = "https://aiopygismeteo.readthedocs.io"
urls.repository = "https://github.com/monosans/aiopygismeteo"

[dependency-groups]
dev = [
  "mypy[faster-cache]==1.19.1",
  "pytest==9.0.2",
  "pytest-asyncio==1.3.0",
  "pytest-github-actions-annotate-failures==0.3",
  "ruff==0.14.11",
]
docs = [
  "mkdocs-material==9.7.1",
  "mkdocs-minify-html-plugin==0.3.9",
  "mkdocstrings==1.0.0",
  "mkdocstrings-python==2.0.1",
  "ruff==0.14.11",
]

[tool.hatch.build.targets.sdist]
only-include = ["src"]

[tool.hatch.version]
path = "src/aiopygismeteo/__init__.py"
