[project]
name = "aiopygismeteo"
description = "Asynchronous wrapper for Gismeteo API"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "monosans", email = "hsyqixco@protonmail.com" }]
classifiers = [
  "Framework :: AsyncIO",
  "Framework :: Pydantic",
  "Framework :: Pydantic :: 2",
  "Framework :: aiohttp",
  "Natural Language :: Russian",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: 3.15",
  "Typing :: Typed",
]
urls.documentation = "https://monosans.github.io/aiopygismeteo"
urls.repository = "https://github.com/monosans/aiopygismeteo"
dependencies = [
  "aiohttp>=3.8",
  "pygismeteo-base>=6.0.1,<7",
  "typing-extensions>=4",
]
dynamic = ["version"]

[dependency-groups]
dev = [
  "mypy==2.2.0",
  "pytest==9.1.1",
  "pytest-asyncio==1.4.0",
  "pytest-github-actions-annotate-failures==0.4.2",
  "ruff==0.15.20",
]
docs = [
  "mkdocstrings==1.0.4",
  "mkdocstrings-python==2.0.5",
  "ruff==0.15.20",
  "zensical==0.0.48",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
only-include = ["src"]

[tool.hatch.version]
path = "src/aiopygismeteo/__init__.py"

[tool.uv]
exclude-newer = "3 days"

[tool.uv.sources]
pygismeteo-base = { git = "https://github.com/monosans/pygismeteo-base", branch = "main" }
